+ Added descriptions to slash commands
+ Fixed bugs related to the Library category