@@ -1,0 +1,9 @@
+colours = {
+    "red": (255, 0, 0),
+    "orange": (255, 165, 0),
+    "yellow": (255, 255, 0),
+    "green": (0, 128, 0),
+    "cyan": (0, 255, 255),
+    "blue": (0, 0, 255),
+    "indigo": (75, 0, 130)
+}
